# nightwaveplaza-tui

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
ci/: build.sh  entrypoint.sh
ci/github-actions/: build.sh  entrypoint.sh  generate-pkgbuild.py
src/: audiostream.rs  background.rs  background_config.rs  main.rs
