[package]
name = "radio"
version = "0.1.0"
authors = ["antti l"]
edition = "2018"

[dependencies]
rand = "*"
gstreamer = "0.7.0"
notify-rust = "*"
chrono = "*"
reqwest = {verion = "*", features = ["blocking"]}
image = "0.23.14"
viuer = "*"
crossterm = "0.20"
ctrlc = { version = "3.1", features = ["termination"] }
term_size = "0.3.2"