[package]
name = "nightwaveplaza-tui"
version = "0.2.7"
authors = ["joshmuente"]
edition = "2018"

[dependencies]
rand = "0.8.4"
gstreamer = "0.7.0"
notify-rust = "4.5.3"
chrono = "0.4.19"
reqwest = {version = "0.11.4", features = ["blocking"]}
image = "0.23.14"
viuer = "0.5.2"
crossterm = "0.20"
ctrlc = { version = "3.1", features = ["termination"] }
term_size = "0.3.2"